deepin_desktop_common_defconfig: enable Qualcomm Wi-Fi 7 driver

--- a/arch/x86/configs/deepin_desktop_common_defconfig
+++ b/arch/x86/configs/deepin_desktop_common_defconfig
@@ -1586,6 +1586,9 @@ CONFIG_WCN36XX=m
 CONFIG_ATH11K=m
 CONFIG_ATH11K_AHB=m
 CONFIG_ATH11K_PCI=m
+CONFIG_ATH12K=m
+CONFIG_ATH12K_DEBUG=y
+CONFIG_ATH12K_TRACING=y
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
 CONFIG_PCMCIA_ATMEL=m
