--- a/arch/arm64/configs/deepin_arm_desktop_defconfig
+++ b/arch/arm64/configs/deepin_arm_desktop_defconfig
@@ -1372,6 +1372,12 @@ CONFIG_ATH10K_PCI=m
 CONFIG_ATH10K_AHB=y
 CONFIG_ATH10K_SDIO=m
 CONFIG_ATH10K_USB=m
+CONFIG_ATH11K=m
+CONFIG_ATH11K_AHB=m
+CONFIG_ATH11K_PCI=m
+CONFIG_ATH12K=m
+CONFIG_ATH12K_DEBUG=y
+CONFIG_ATH12K_TRACING=y
 CONFIG_WCN36XX=m
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
