--- a/arch/arm64/configs/deepin_arm_desktop_defconfig
+++ b/arch/arm64/configs/deepin_arm_desktop_defconfig
@@ -1433,8 +1433,18 @@ CONFIG_MWIFIEX_USB=m
 CONFIG_MWL8K=m
 CONFIG_MT7601U=m
 CONFIG_MT76x0U=m
+CONFIG_MT76x0E=m
 CONFIG_MT76x2E=m
 CONFIG_MT76x2U=m
+CONFIG_MT7603E=m
+CONFIG_MT7615E=m
+CONFIG_MT7663U=m
+CONFIG_MT7663S=m
+CONFIG_MT7915E=m
+CONFIG_MT7921E=m
+CONFIG_MT7921S=m
+CONFIG_MT7921U=m
+CONFIG_MT7996E=m
 CONFIG_RT2X00=m
 CONFIG_RT2400PCI=m
 CONFIG_RT2500PCI=m
